processed/gerrit/txt_full/38899.txt
Change:     38899
Subject:    LU-13498 tests: try to fix sanity 56w failure
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/38899
Change-Id:  I1f2ad41fd307cacebb6d2c901aca284a4908fb8a
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Sebastien Buisson
Created:    2020-06-11 09:06:51.000000000
Updated:    2020-12-07 07:35:33.000000000
Patch Set:  2
Insertions: +32
Deletions:  -31
Comments:   6 (0 unresolved)

--- Commit Message ---
LU-13498 tests: try to fix sanity 56w failure

Try to fix sanity 56w failure.

Test-Parameters: fortestonly
Test-Parameters: env=SHARED_KEY=true mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity
Test-Parameters: env=SHARED_KEY=true mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity
Test-Parameters: env=SHARED_KEY=true mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity
Test-Parameters: env=SHARED_KEY=true mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity
Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I1f2ad41fd307cacebb6d2c901aca284a4908fb8a

--- Review History ---

--- Message (Sebastien Buisson, 2020-06-11 09:06:51.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2020-06-11 09:06:56.000000000) ---
Patch Set 1:

(3 comments)

3 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-06-11 09:08:51.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/ptlrpc/gss/gss_cli_upcall.c: In function ‘gss_do_ctx_fini_rpc’:
 /home/green/git/lustre-release/lustre/ptlrpc/gss/gss_cli_upcall.c:434:1: error: label ‘out_ref’ defined but not used [-Werror=unused-label]
  out_ref:
  ^
 /home/green/git/lustre-release/lustre/ptlrpc/gss/gss_cli_upcall.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Sebastien Buisson, 2020-06-11 09:10:15.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2020-06-11 09:10:16.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/74922/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2020-06-11 09:10:23.000000000) ---
Patch Set 1:

centos7: Compile failed

rhel8.1: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/9631/results.html

--- Message (wc-checkpatch, 2020-06-11 09:12:06.000000000) ---
Patch Set 2:

(3 comments)

3 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2020-06-11 09:13:26.000000000) ---
Patch Set 2:

Builds for x86_64 centos7,rhel8.1 successful
Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/9632/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity1@zfs sanity2@zfs sanity-slow@zfs sanity1@zfs sanity2@zfs sanity-slow@zfs sanity1@zfs sanity2@zfs sanity-slow@zfs

--- Message (jenkins, 2020-06-11 10:33:57.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/14952/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/74923/ : SUCCESS

--- Message (Autotest, 2020-06-11 10:35:26.000000000) ---
Patch Set 2:

Trevis Autotest started optional custom session for build 74923. The following test parameters were specified: env=SHARED_KEY= true  mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity.

--- Message (Autotest, 2020-06-11 10:35:45.000000000) ---
Patch Set 2:

Trevis Autotest2 started optional custom session for build 74923. The following test parameters were specified: env=SHARED_KEY= true  mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity.

--- Message (Autotest, 2020-06-11 10:35:46.000000000) ---
Patch Set 2:

Trevis Autotest started optional custom session for build 74923. The following test parameters were specified: env=SHARED_KEY= true  mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity.

--- Message (Autotest, 2020-06-11 10:36:05.000000000) ---
Patch Set 2:

Trevis Autotest2 started optional custom session for build 74923. The following test parameters were specified: env=SHARED_KEY= true  mdscount=2 mdtcount=4 osscount=2 ostcount=8 testlist=sanity.

--- Message (Lustre Gerrit Janitor, 2020-06-11 11:08:34.000000000) ---
Patch Set 2:

Initial testing failed:

> sanity2@zfs Failure(5221s)
- 160f(mds1: User cl6 still registered) 398a(lock should be cancelled by direct IO) 

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity-slow@zfs sanity1@zfs sanity2@zfs sanity-slow@zfs sanity1@zfs sanity2@zfs sanity-slow@zfs sanity1@zfs sanity2@zfs sanity-slow@zfs 

(centos7)All results and logs: https://testing-archive.whamcloud.com/gerrit-janitor/9632/results.html

--- Message (Maloo, 2020-06-11 11:51:49.000000000) ---
Patch Set 2:

Failed optional test custom-103 on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-6vm1: https://testing.whamcloud.com/test_sessions/ef3e97f2-b276-4d2f-b273-de1f1eb9e3a0 ran 3 tests.  1 tests failed: sanity.

--- Message (Maloo, 2020-06-11 11:52:56.000000000) ---
Patch Set 2:

Failed optional test custom-104 on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-56vm6: https://testing.whamcloud.com/test_sessions/81995de6-1ee1-48ec-ba94-f16e8967ccb3 ran 3 tests.  1 tests failed: sanity.

--- Message (Maloo, 2020-06-11 11:53:25.000000000) ---
Patch Set 2:

Failed optional test custom-101 on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-7vm6: https://testing.whamcloud.com/test_sessions/112b3b54-b06e-41ae-9161-11cbe957d83c ran 3 tests.  1 tests failed: sanity.

--- Message (Maloo, 2020-06-11 11:53:56.000000000) ---
Patch Set 2:

Failed optional test custom-102 on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-33vm1: https://testing.whamcloud.com/test_sessions/995aaf6f-b06b-45c0-a9aa-11565b26d0bc ran 3 tests.  1 tests failed: sanity.

--- Message (Sebastien Buisson, 2020-12-07 07:35:33.000000000) ---
Abandoned

Not necessary after #40122 landed.
